# slurm-jobs-monitor

./: .gitignore  README.md  pyproject.toml  slurm_test_2382.err  slurm_test_2382.out
assets/: config_example.yaml
scripts/: launch_monitor.py
src/slurmonitor/: __init__.py  agent.py  cli.py  core.py  discord_notifier.py  utils.py
tests/: 2392_exp1_0.out  2392_exp1_1.out  2392_exp1_2.out  dummy.py  dummy.sh  test_agent.py  test_discord.py  test_slurm_monitor.py
