[project]
name = "slurmonitor"
version = "1.1.0"
description = "A simple system for monitoring Slurm jobs via Discord"
readme = "README.md"
authors = [
    { name = "David Nardi", email = "david.nardi1@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[project.scripts]
slurmonitor = "slurmonitor.cli:main"
hello-monitor = "slurmonitor.cli:hello_monitor"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]
